# FPL_Assistant

./: .gitignore  README.md  commit-msg.txt  expected_points.csv  fbref_pipeline.txt  fpl_pipeline.txt  pyproject.toml  requirements.txt
apps/: clubelo_manager_elo_app.py  understat_league_tables_app.py
config/: league_dict.json  player_rules.json  player_spelling_aliases.json  team_rules.json  whoscored_competition_groups.json  whoscored_competitions.json  world_cup_team_aliases.json
data/config/: transfermarkt_premier_league_clubs.json
notebooks/: 2025_2026.ipynb  WhoScored.ipynb  analysis.ipynb  app.py  checkers.ipynb  data_analysis.ipynb  eda.ipynb  eos.ipynb  fbref.ipynb  features.ipynb  fpl.ipynb  ga_analysis.ipynb  index.ipynb  man_utd.ipynb  new.ipynb  point_won.ipynb  sanity.py  test.ipynb  wages.ipynb
scripts/: clean_fbref.py  excel.py  fbref_match_stats.py  fbref_season_stats.py  fbref_utils.py  other.py  registry.py  scrape_fpl.py  test.ipynb  transformer.py
scripts/app/: index.py
scripts/extras/: fbref.py  fbref_players.py  fpl_json_to_df.py  new.py
src/: conflict_resolver.py  id_generator.py  registry_updater.py
tests/: conftest.py  test_add_fbref_pl_matches.py  test_add_pl_season_bands.py  test_add_transfermarkt_managers.py  test_clubelo_understat_enrichment.py  test_fbref_adapter.py  test_fpl_api_client.py  test_propose_player_aliases.py  test_team_form_fdr.py  test_team_state.py  test_transfermarkt_manager_history_scraper.py  test_understat_clean_raw.py  test_whoscored_match_stats_scraper.py
visualizations/: pressing
(+156 files in other folders)
